[package]

# Cargo.toml ---> Cargo's configuration format
# vs
# Cargo.lock --> keeps track of exact version of dependencies in project | don't need to change manually
# Cargo helps organize projects

name = "hello_cargo"
version = "0.1.0"
authors = ["Grace Chung <gcw.chung@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
